<resources>
    <string name="app_name">MedicineApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_group_list">Your Groups</string>
    <string name="menu_group">Add Group</string>
    <string name="menu_medicine">Add Medicine</string>
    <string name="menu_medicine_edit">Edit Medicine</string>
    <string name="menu_medicine_list">Your Medicine</string>
    <string name="menu_medicine_details">Medicine Details</string>
    <string name="menu_scheduler">Scheduler</string>
    <string name="menu_reminder">Add Reminder</string>
    <string name="menu_history">History</string>
    <string name="menu_access_control">Access Control</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_fragment_search">Search</string>
    <string name="menu_fragment_delete_all">Delete All</string>
    <string name="menu_fragment_delete">Delete</string>
    <string name="menu_history_fragment_delete_all">Delete History</string>
    <string name="menu_medicine_fragment_print">Print</string>



    <string name="group_header">Create a Group</string>
    <string name="hint_group">Group Name</string>
    <string name="btn_add_group">Add Group</string>
    <string name="btn_edit_group">Edit Group</string>
    <string name="hint_group_priority">Pick a Priority Level</string>
    <string name="group_error">Error Creating Group</string>
    <string name="group_floating_action_btn_desc">Button for adding groups</string>

    <string name="auth_failed">Error Authenticating with Firebase</string>
    <string name="sign_out">Sign Out</string>
    <string name="header_login_account">Login/Signup</string>
    <string name="hint_email">Enter your Email</string>
    <string name="hint_password">Enter your Password</string>
    <string name="btn_signUp">Signup</string>
    <string name="btn_login">Login</string>

    <string name="message_loading">Loading…</string>
    <string name="empty_groups">No Groups found. Add some with the button below</string>
    <string name="empty_medication">No Medication Found For this Group. Add some with the button below</string>
    <string name="empty_reminders">No Reminders found</string>
    <string name="empty_history">No Confirmations for selected day</string>


    <string name="medicine_header">Enter the info of your Medication</string>
    <string name="hint_medicine_name">Medicine Name</string>
    <string name="hint_medicine_quantity">Medicine Quantity</string>
    <string name="hint_medicine_usageDir">Medicine Usage Directions</string>
    <string name="hint_medicine_reminderLimit">Reminder Limit</string>
    <string name="hint_medicine_dosage">Medicine Dosage</string>
    <string name="hint_medicine_sideEffects">Enter Side Effects</string>
    <string name="enter_quantity_text">Enter Quantity:</string>
    <string name="enter_reminder_limit">Reminder Limit:</string>
    <string name="choose_med_type">Choose Type:</string>
    <string name="enter_dosage">Enter Dosage:</string>
    <string name="btn_add_medication">Add Med</string>
    <string name="btn_edit_medication">Edit Med</string>
    <string name="med_list_floating_action_btn_desc">Button for adding medicine to group</string>
    <string name="medicine_details_header">Medicine Info</string>
    <string name="medicine_details_quantity">Quantity:</string>
    <string name="medicine_details_dosage">Dosage:</string>
    <string name="medicine_details_reminder_limit">Limit:</string>
    <string name="medicine_details_usage_directions">Usage Directions</string>
    <string name="na">N/A</string>

    <string name="formatDate">%1$td/%1$tm/%1$tY</string>
    <string name="formatTime">%1$tI:%1$tM%1$tp</string>
    <string name="reminder_header">Reminders:</string>
    <string name="btn_edit_reminder">Edit Reminder</string>
    <string name="btn_change_medication">Edit Med</string>
    <string name="reminder_repeat_header">Repeat</string>
    <string name="reminder_quantity_header">Quantity</string>
    <string name="btn_add_reminder">Add reminder</string>
    <string name="scheduler_floating_action_btn_desc">Button for adding reminders</string>

    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="once_off">Once Off</string>
    <string name="repeat">Repeating</string>

    <string name="save_pdf">Save as PDF</string>
    <string name="save_list_pdf">Save List as PDF</string>

    <string name="settings">Settings</string>
    <string name="snooze_preference_key">snooze_limit</string>
    <string name="theme_preferences_key">theme</string>
    <string name="notif_preferences_key">notif_settings</string>
    <string name="pharmacy_preference_key">pharmacy</string>
    <string name="confirm_delete_preference_key">confirm_delete</string>
    <string name="confirm_exit_preference_key">confirm_exit</string>
    <string name="delete_account_preference_key">delete_account_setting</string>
    <string name="repository_preference_key">about_setting</string>
    <string name="repository_desc">View apps GitHub repository</string>
    <string name="repository_link">https://github.com/seancrowley-jpg/MedicineApp</string>
    <string name="dark_theme_description">Dark mode</string>
    <string name="light_theme_description">Light mode</string>
    <string name="system_theme_description">Following systems theme</string>
    <string name="dark_theme_preference_value">0</string>
    <string name="light_theme_preference_value">1</string>
    <string name="system_theme_preference_value">2</string>
    <string-array name="themes_entries">
        <item>Dark</item>
        <item>Light</item>
        <item>System default</item>
    </string-array>
    <string-array name="themes_values">
        <item>@string/dark_theme_preference_value</item>
        <item>@string/light_theme_preference_value</item>
        <item>@string/system_theme_preference_value</item>
    </string-array>

    <string name="high_priority_helper_text">High Priority Medication\nUsed for medication that can not be missed. You will receive Reminders that cannot be skipped for meds in this group.</string>
    <string name="low_priority_helper_text">Low Priority Medication\nUsed for skippable medication (eg. Vitamins)that can be missed. You will receive non intrusive notifications for meds in this group.</string>
    <string name="group_high">High</string>
    <string name="group_low">Low</string>
    <string name="group_priority">Priority: </string>
    <string name="group_history">Group: </string>
    <string name="med_history">Med: </string>
    <string name="history_header">Reminder History</string>

    <string name="btn_confirm">Confirm</string>
    <string name="btn_snooze">Snooze</string>
    <string name="confirm_header_group">Group</string>
    <string name="confirm_header_Med">Medication</string>
    <string name="confirm_header_quantity">Quantity:</string>
    <string name="confirm_header_dosage">Dosage:</string>
    <string name="confirm_header_name">Name:</string>
    <string name="confirm_header_quantityDue">Quantity Due:</string>
    <string name="confirm_med_due">Medication Due</string>

    <string name="dashboard_groups_chip">Total Groups: </string>
    <string name="dashboard_meds_chip">Total Meds: </string>
    <string name="dashboard_history_chip">Total Confirmations: </string>
    <string name="dashboard_scheduler_chip">Total Reminders: </string>
    <string name="dashboard_groups_meds_header">Your Groups + Meds</string>
    <string name="dashboard_next_alarm_header">Next Alarm</string>
    <string name="dashboard_welcome">Welcome,</string>
    <string name="dashboard_morning">Good Morning,</string>
    <string name="dashboard_afternoon">Afternoon,</string>
    <string name="dashboard_evening">Good Evening,</string>
    <string name="dashboard_night">Good Night,</string>

    <string-array name="type">
        <item>Pills</item>
        <item>Injection</item>
        <item>Liquid</item>
        <item>Drops</item>
        <item>Inhaler</item>
    </string-array>

    <string-array name="unit">
        <item>pill(s)</item>
        <item>unit(s)</item>
        <item>ml(s)</item>
        <item>ml(s)</item>
        <item>puff(s)</item>
    </string-array>

    <string name="splash_screen_content_desc">Application logo</string>

    <string name="add_confirm_status_header">Choose status</string>
    <string name="add_confirm_radio_taken">Taken</string>
    <string name="add_confirm_radio_skipped">Skipped</string>
    <string name="add_confirm_radio_yes">Yes</string>
    <string name="add_confirm_radio_no">No</string>
    <string name="add_confirm_update_header">Update this medicines quantity?</string>
    <string name="add_confirm_quantity_header">Quantity</string>
    <string name="btn_add_confirmation">Add Confirmation</string>
    <string name="btn_edit_confirmation">Edit Confirmation</string>







</resources>