<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_search_medicine"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_fragment_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/saveAsPdf"
        android:title="@string/save_list_pdf"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/print"
        android:title="@string/menu_medicine_fragment_print"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/delete_all_meds"
        android:title="@string/menu_fragment_delete_all"
        app:showAsAction="collapseActionView"/>

</menu>