<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="groupvm"
            type="ie.wit.medicineapp.ui.group.GroupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".ui.group.GroupFragment">

        <TextView
            android:id="@+id/groupText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="33dp"
            android:gravity="center"
            android:text="@string/group_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/GroupNameTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_group"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/groupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{groupvm.observableGroup.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/groupPriorityHeader"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/hint_group_priority"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GroupNameTextField" />

        <RadioGroup
            android:id="@+id/priorityLevelGroup"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/GroupNameTextField"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/GroupNameTextField"
            app:layout_constraintTop_toBottomOf="@+id/groupPriorityHeader">

            <RadioButton
                android:id="@+id/highPriorityRadio"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/group_high" />

            <RadioButton
                android:id="@+id/lowPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/group_low" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_group_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:text="@string/btn_add_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priorityLevelGroup" />

        <TextView
            android:id="@+id/priorityHelperText"
            android:layout_width="370dp"
            android:layout_height="188dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="180dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/high_priority_helper_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priorityLevelGroup"
            app:layout_constraintVertical_bias="0.45" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>