<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="medicinevm"
            type="ie.wit.medicineapp.ui.medicine.MedicineViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            tools:context=".ui.medicine.MedicineFragment">

            <TextView
                android:id="@+id/medicineText"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="33dp"
                android:text="@string/medicine_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/MedicineNameTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_medicine_name"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medicineText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/medicineName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{medicinevm.observableMedicine.name}" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/medicineQuantityHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="65dp"
                android:text="@string/enter_quantity_text"
                app:layout_constraintEnd_toStartOf="@+id/MedicineQuantityTextField"
                app:layout_constraintHorizontal_bias="0.272"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MedicineNameTextField">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/MedicineQuantityTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:hint="@string/hint_medicine_quantity"
                android:inputType="number"
                android:padding="8dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.847"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MedicineNameTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/medicineQuantity"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@{`` + medicinevm.observableMedicine.quantity}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="101dp"
                android:text="@string/enter_dosage"
                app:layout_constraintEnd_toStartOf="@+id/MedicineDosageTextField"
                app:layout_constraintHorizontal_bias="0.387"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medicineQuantityHeader">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/MedicineDosageTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:hint="@string/hint_medicine_dosage"
                android:inputType="text"
                android:padding="8dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.847"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MedicineQuantityTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/medicineDosage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@{medicinevm.observableMedicine.dosage}" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/MedicineUserDirTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:hint="@string/hint_medicine_usageDir"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MedicineDosageTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/medicineUserDir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{medicinevm.observableMedicine.usageDir}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/reminder_limit_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="65dp"
                android:layout_marginEnd="9dp"
                android:text="@string/enter_reminder_limit"
                app:layout_constraintEnd_toStartOf="@+id/MedicineReminderLimitTextField"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MedicineUserDirTextField">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/MedicineReminderLimitTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:hint="@string/hint_medicine_reminderLimit"
                android:inputType="number"
                android:padding="8dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.847"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MedicineUserDirTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/medicineReminderLimit"
                    android:layout_width="match_parent"
                    android:inputType="numberDecimal"
                    android:layout_height="wrap_content"
                    android:text="@{`` + medicinevm.observableMedicine.reminderLimit}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/type_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="106dp"
                android:text="@string/choose_med_type"
                app:layout_constraintEnd_toStartOf="@+id/typePicker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reminder_limit_header"
                tools:text="Choose Type:">

            </TextView>


            <NumberPicker
                android:id="@+id/typePicker"
                android:layout_width="214dp"
                android:layout_height="100dp"
                android:layout_marginTop="36dp"
                android:value="@={medicinevm.observableMedicine.type}"
                android:onValueChange="@{(view, oldValue, newValue) -> medicinevm.setType(newValue)}"
                app:minValue="@{0}"
                app:maxValue="@{4}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.847"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MedicineReminderLimitTextField" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_medicine_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:text="@string/btn_add_medication"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typePicker" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>